# cortex-poc

./: .gitignore  README.md  main.py  pyproject.toml
cortex/core/agents/: __init__.py  agent.py  core.py  dict_utils.py  handlers.py  logger.py  protocol.py  schema_utils.py  streaming.py  types.py  utils.py
cortex/core/llm/: __init__.py  base_provider.py
cortex/core/llm/providers/: __init__.py  openai.py
cortex/core/reporting/: report_generator.py  rule_generator.py
cortex/core/reporting/formatters/: markdown.py
cortex/features/analysis/: batch_analyzer.py
cortex/features/models/: __init__.py  models.py  schemas.py  security.py
cortex/features/processors_engine/: __init__.py  log_processor.py
cortex/features/security/: __init__.py  agent.py
cortex/features/security/analyzers/: anomaly_detector.py  attack_analyzer.py  pattern_analyzer.py  risk_assessor.py  statistics_calculator.py
docs/: security_specs.md
logs/: clamav.jsonl  eve.jsonl  generated_events.jsonl
